# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.runner]
inherits = "release"
debug = true
out_dir = "custom"

[workspace]
members = [
    "libpresifuzz_feedbacks",
    "libpresifuzz_observers",
    "libpresifuzz_schedulers",
    "libpresifuzz_ec",
    "libpresifuzz_mutators",
    "libpresifuzz_riscv",
    "libpresifuzz_stages",
]
exclude = [
    "fuzzers",
    "dep"
]
