[package]
name = "hw_utils"
authors = ["Addison Crump <addison.crump@cispa.de>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.9.0" }
num-traits = "0.2.15"
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
