# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libpresifuzz_ec"
version = "0.0.2"
authors = ["Nassim Corteggiani <nassim.corteggiani@intel.com>"]
edition = "2021"
description = "EC Support for hardware fuzzing"
repository = "https://github.com/intel-sandbox/labs.presifuzz"
readme = "README.md"
license = "Apache-2.0"
categories = ["development-tools::testing"]
keywords = ["fuzzing", "hardware", "simulation"]

[features]
default = ["std"]
std = []
debug = []
serialize_bytes = ["std"]
introspection = ["std"]
fork = ["std"]

[build-dependencies]
cc = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(serialize_bytes)', 'cfg(introspection)', 'cfg(serdeany_autoreg)', 'cfg(fork)'] }

[dependencies]
libafl = { version = "0.11.2"}
libafl_bolts = { version = "0.11.2"}
nix = "0.24"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
erased-serde = { version = "0.3.21", default-features = false, features = ["alloc"] } # erased serde
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
intervaltree = { version = "0.2.7", default-features = false, features = ["serde"] }
libc = "0.2"
fs_extra = "1.2.0"
yaml-rust = "0.4.5"
rand = "0.8.5"
serde_yaml = "0.9.27"
color-print = "0.3.5"
subprocess = "0.2.9"
chrono = "0.4.34"
file_diff = "1.0.0"
typed-builder = "0.18.1"
tokio = { version = "1.44.2", features = ["sync", "net", "rt", "io-util", "macros"] } # only used for TCP Event Manager right now
postcard = { version = "1.0", features = ["alloc"], default-features = false } # no_std compatible serde serialization format
serde_json = "1.0.114"
bincode = "1.3.3"
