# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libpresifuzz_feedbacks"
version = "0.0.2"
authors = ["Nassim Corteggiani <nassim.corteggiani@intel.com>"]
edition = "2021"
description = "Feedback to analyze coverage from a VerdiObserver"
repository = "https://github.com/IntelLabs/PreSiFuzz"
readme = "README.md"
license = "Apache-2.0"
categories = ["development-tools::testing"]
keywords = ["fuzzing", "hardware", "simulation"]

[features]
default = ["std"]
const_false = []
const_true = []
std = []
serdeany_autoreg = ["std"]

[build-dependencies]
cc = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(serdeany_autoreg)'] }

[dependencies]
libafl = { version = "0.11.2"}
libafl_bolts = { version = "0.11.2"}
nix = "0.24"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
erased-serde = { version = "0.3.21", default-features = false, features = ["alloc"] } # erased serde
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
intervaltree = { version = "0.2.7", default-features = false, features = ["serde"] }
libc = "0.2"
fs_extra = "1.2.0"
libpresifuzz_observers = {  path = "../libpresifuzz_observers"}

