# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libpresifuzz_observers"
authors = ["Nassim Corteggiani <nassim.corteggiani@intel.com>, Sergej Schumilo <sergej.schumilo@intel.com>"]
version = "0.0.2"
edition = "2021"
description = "Observer to collect coverage from vdb using VERDI NPI"
repository = "https://github.com/IntelLabs/PreSiFuzz"
readme = "README.md"
license = "Apache-2.0"
categories = ["development-tools::testing"]
keywords = ["fuzzing", "hardware", "simulation"]

[features]
default = ["std", "csv_dump"]
input_injection = []
std = []
csv_dump = []

[build]
build = "build.rs"

[build-dependencies]
cc = "1"

[dependencies]
clap = { version = "3.2", features = ["default"] }
libafl = { version = "0.11.2"}
libafl_bolts = { version = "0.11.2"}
nix = "0.24"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
erased-serde = { version = "0.3.21", default-features = false, features = ["alloc"] } # erased serde
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
intervaltree = { version = "0.2.7", default-features = false, features = ["serde"] }
libc = "0.2"
fs_extra = "1.2.0"
csv = "1.3.0"
serde_yaml = "0.9.27"
hex = "0.4.3"
lazy_static = "1.4.0"
elf = "0.7.4"
rand = "0.8.5"
tempfile = "3.9.0"
flate2 = "1.0"
quick-xml = "0.23"
