# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "opentitan-fuzzer"
version = "0.0.1"
authors = ["Nassim Corteggiani <nassim.corteggiani@intel.com>"]
edition = "2021"

[features]
default = ["std"]
tui = []
std = []

[dependencies]
cfg-if = "1"
clap = { version = "4.5.38", features = ["default"] }
libafl = { version = "0.11.1" }
libpresifuzz_ec = { path = "../../libpresifuzz_ec" }
libpresifuzz_observers = { path = "../../libpresifuzz_observers" }
libpresifuzz_feedbacks = { path = "../../libpresifuzz_feedbacks" }
libpresifuzz_stages = { path = "../../libpresifuzz_stages" }
libafl_bolts = { version = "0.11.1" }
nix = "0.24"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
erased-serde = { version = "0.3.21", default-features = false, features = ["alloc"] } # erased serde
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
intervaltree = { version = "0.2.7", default-features = false, features = ["serde"] }
wait-timeout = "0.1.5"
libc = "0.2"
fs_extra = "1.2.0"
tempdir = "0.3.7"


