# SPDX-FileCopyrightText: 2022 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "secworks-vcs"
version = "0.0.1"
authors = ["Nassim Corteggiani <nassim.corteggiani@intel.com>"]
edition = "2021"

[features]
default = ["std"]
tui = []
std = []

[profile.runner]
inherits = "release"
debug = true
out_dir = "runner"

[dependencies]
clap = { version = "3.2", features = ["default"] }
libafl = { version = "0.14.1" }
libafl_bolts = { version = "0.11.1" }
libpresifuzz_observers = { path = "../../libpresifuzz_observers" }
libpresifuzz_feedbacks = { path = "../../libpresifuzz_feedbacks" }
nix = "0.24"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
erased-serde = { version = "0.3.21", default-features = false, features = ["alloc"] } # erased serde
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
intervaltree = { version = "0.2.7", default-features = false, features = ["serde"] }
libc = "0.2"
tempdir = "0.3.7"
wait-timeout = "0.1.5"
fs_extra = "1.2.0"
